# darts-solver

./: .gitignore  CMakeLists.txt  Distribution.h  README.md  Solver.h  build_test.sh  build_wasm.sh  doxygen.conf  gen_target.py  main.cpp  results.txt  show_polygons.py  target.txt  test_solverminrounds.cpp  visualize_darts.py
.github/workflows/: deploy.yml
docs/: mainpage.md
src/: CMakeLists.txt  Distribution.cpp  Distribution.h  Duvant.cpp  Duvant.hpp  Game.cpp  Game.h  Geometry.cpp  Geometry.h  Random.h  Solver.cpp  Solver.h  Target.h
src/bindings/: CMakeLists.txt  glue.cpp
src/cpp/: CMakeLists.txt  Distribution.cpp  Distribution.h  Game.cpp  Game.h  Geometry.h  Random.h  Solver.cpp  Solver.h
src/web/: debug.html  debug.js  index.html  landing.md  target.out  test.js  worker.js
src/web/js/: dartboard.js  main.js  state.js  target.js  wasm.js
src/web/js/pages/: calibration.js  solver.js
src/web/styles/: main.css
tests/: CMakeLists.txt  test_distributions.cpp  test_game.cpp  test_geometry.cpp  test_integration.cpp
